@@ -1,4 +1,9 @@
-﻿shmuel 04.05.2014 02:12:28 +0200 - build 326
+﻿shmuel 04.05.2014 11:24:24 +0200 - build 327
+
+1. LuaFAR: ряд функций приведен в соответствие с документацией в отношении их возвращаемых значений.
+   Эти функции могли возвращать 0 значений, тогда как по документации должны были возвращать nil или false.
+
+shmuel 04.05.2014 02:12:28 +0200 - build 326
 
 1. Откат build 325.
 
